--- a/Task3_IdanCezana/learned.html
+++ b/Task3_IdanCezana/learned.html
@@ -2,8 +2,8 @@
 <html lang="">
 <head>
     <meta charset="utf-8" />
-    <title>הפרופיל של עידן צזנה</title>
-    <meta name="description" content="קצת פרטים על עידן צזנה" />
+    <title>קצת על הלימודים של עידן צזנה</title>
+    <meta name="description" content="קצת על הלימודים של עידן צזנה" />
     <meta name="keywords" content="עידן,צזנה,idan,cezana,profile,orange,כתום,פרופיל,carrot,גזר,צבא,תיכון,מחשבים,משחקים,games,gamer" />
     <meta name="author" content="עידן צזנה" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
